# dac-face-spoofing

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: apply_wandb_to_models.sh  generate_submission.py  prepare_data.py  run_inference.py  run_training.py
src/dino/config/: config.py
src/dino/data/: dataset.py
src/dino/inference/: predict.py
src/dino/models/: dino_model.py
src/dino/training/: train.py
src/ensemble/: feature_extractor.py  msp_rejection.py  tune_threshold.py
src/ensemble/config/: config.py
src/ensemble/inference/: predict.py
src/ensemble/training/: train_xgboost.py
src/resnet/config/: config.py
src/resnet/inference/: predict.py
src/resnet/models/: resnet_model.py
src/resnet/training/: train.py
src/utils/: augmentation.py  dataset.py  metrics.py  visualization.py  wandb_config.py  wandb_utils.py
src/vit/config/: config.py
src/vit/inference/: predict.py
src/vit/models/: vit_model.py
src/vit/training/: train.py
src/wide_resnet/config/: config.py
src/wide_resnet/inference/: predict.py
src/wide_resnet/models/: wide_resnet_model.py
src/wide_resnet/training/: train.py
