[project]
name = "findit-data"
version = "0.1.0"
description = "Face spoofing detection using ensemble of transformers and CNNs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
    "xgboost>=3.2.0",
]
